# napari-plugin-devtools

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy.yml
documentation/: CLI_usage.md
napari_plugin_devtools/: __init__.py  __main__.py  data_mock.py  layer_factory.py  plugin_tester.py  validation.py
napari_plugin_devtools/_test/: test_pytest_plugin.py
