[metadata]
name = napari-plugin-devtools
url = https://github.com/napari/napari-plugin-devtools
license = MIT
license_file = LICENSE
description = napari plugin devtool
long_description = file: README.md
long_description_content_type = text/markdown
author = napari team
author_email = napari-steering-council@googlegroups.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.6
install_requires =
    importlib-metadata>=1.5.0
    napari>=0.4.4
    pkginfo

[options.entry_points]
console_scripts =
    npd = napari_plugin_devtools.__main__:main

[options.extras_require]
test =
    pytest
    pytest-cov
dev = 
    %(test)s
    pre-commit
    tox
    tox-conda

[flake8]
max-line-length=88
